add new session folder